--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -28,4 +28,4 @@ COPY . .
 EXPOSE 8000
 
 # 🚀 Chạy ứng dụng
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["gunicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
