--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -14,9 +14,9 @@ Jinja2==3.1.5
 lazy_loader==0.4
 MarkupSafe==3.0.2
 mpmath==1.3.0
-networkx==3.4.2
+networkx==3.2.1
 ninja==1.11.1.3
-numpy==2.2.3
+numpy==1.24.3
 opencv-python-headless==4.11.0.86
 packaging==24.2
 pillow==11.1.0
@@ -26,15 +26,18 @@ pydantic_core==2.27.2
 python-bidi==0.6.6
 python-multipart==0.0.20
 PyYAML==6.0.2
-scikit-image==0.25.2
-scipy==1.15.2
+scikit-image==0.24.0
+scipy==1.13.1
 setuptools==75.8.0
 shapely==2.0.7
 sniffio==1.3.1
 starlette==0.45.3
 sympy==1.13.1
-tifffile==2025.2.18
+tifffile==2024.8.30
 torch==2.6.0
 torchvision==0.21.0
 typing_extensions==4.12.2
 uvicorn==0.34.0
+PyPDF2==3.0.1
+pdf2image==1.17.0
+poppler-utils
